# ChangeLog for dev-ruby/sass
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.38 2013/07/28 20:29:53 mrueg Exp $

*sass-3.2.10 (28 Jul 2013)

  28 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +sass-3.2.10.ebuild:
  Version bump

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> sass-3.2.9.ebuild:
  Stable for x86, wrt bug #477478

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> sass-3.2.9.ebuild:
  Stable for amd64, wrt bug #477478

  20 Jul 2013; Hans de Graaff <graaff@gentoo.org> -sass-3.2.5.ebuild,
  -sass-3.2.6.ebuild, -sass-3.2.7.ebuild:
  Cleanup.

*sass-3.2.9 (12 May 2013)

  12 May 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.9.ebuild:
  Version bump.

*sass-3.2.7 (18 Apr 2013)

  18 Apr 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.7.ebuild:
  Version bump.

  07 Mar 2013; Benedikt Böhm <hollow@gentoo.org> sass-3.1.21.ebuild:
  add ~x86 needed by app-admin/chef-server-webui

*sass-3.2.6 (24 Feb 2013)

  24 Feb 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.6.ebuild:
  Version bump.

  24 Feb 2013; Hans de Graaff <graaff@gentoo.org> -sass-3.1.20.ebuild,
  -sass-3.2.3.ebuild, -sass-3.2.4.ebuild:
  Cleanup.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> sass-3.1.20.ebuild,
  sass-3.1.21.ebuild, sass-3.2.3.ebuild, sass-3.2.4.ebuild, sass-3.2.5.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

*sass-3.2.5 (05 Jan 2013)

  05 Jan 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.5.ebuild:
  Version bump.

*sass-3.2.4 (27 Dec 2012)

  27 Dec 2012; Hans de Graaff <graaff@gentoo.org> +sass-3.2.4.ebuild:
  Version bump.

  25 Nov 2012; Thomas Kahle <tomka@gentoo.org> sass-3.2.3.ebuild:
  marked ~x86 per bug 433129

  18 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer as he is not taking care of this package.

  11 Nov 2012; Hans de Graaff <graaff@gentoo.org> sass-3.2.3.ebuild:
  Move forward ppc,ppc64 keywords, oops.
