@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST sass-3.1.21.gem 233472 SHA256 08502fc7889187909d66098629a89a9901d4dce13626339f4976c1e8d16b4a57 SHA512 fed0700147bd8adc90927a16ae2b5a3256392fa6d969c4281ea0189d728e2f0818f5b88b60aea5b59288730e3897bdf58a83ed72b48d4a538d14d16c85234062 WHIRLPOOL 57e59efa57af97c26a80cd83c4d0fe9eda8d30f664e73eab01400fa5c7171a16d0ed6400ebc8680dc78885e961b78a7252d4ea0dbe5d94209f6cca70a6896cb2
 DIST sass-3.2.10.gem 261632 SHA256 03894e68201da1934891e4707e1ed7813a59c9dee9d61a170fdfa10f8973ce2a SHA512 3facb41d2a41b5706036359a6f75902ba4589a02516600bc752420f3a36f41dcf688bea49fce36f308220d267cf92759e92c29011c0ca8d16f20ddbe8c553073 WHIRLPOOL 1b345e20e4becaf43dc74f6f2f231f58562c1cdb4941c09768774f5caca6516a3d4fd703e8b6bb6ed10cfcd38a7c416387bc7d2647ffb3ff833d7cdc8149898f
+DIST sass-3.2.11.gem 263168 SHA256 eb647a6c6e3425e00cda09807a0f1d197b180cfd621ccbcabea52f68575681b5 SHA512 1d4df35684edc4fe6cfb2b92b774bf18f8508bb45daab6cbafdfd08528a49cc7eae183295794937d744c8b014a8720c39510c07513efc66a4557c0eb6abe7965 WHIRLPOOL 9080ca00e7f2cbde5859516ecca82623c987491866a569298505333299b6e9838e2ec575ab83e85508880b2a9bc0df67c1eb231a93e137b133c69d4de00f11e1
 DIST sass-3.2.9.gem 259584 SHA256 f88433638d8dcf31366e55451087e04fb1aecc29c554f240647baba8495c9b22 SHA512 1f018e5276a6d9c03d943b6f2130957a802f31c2079566a9990298b7010121ae623f7183bd3ccdafdeb3fdf1b9338081823098c6f8c0abc734ffb5b5f139f806 WHIRLPOOL be91597cf78679e9758053a442156ca0231e0583c52bb0c18c7c81374724537a3e730874fa581bd76050c11b96b09cff92076208cd3e35937ae1d3c16ed4f8d7
 EBUILD sass-3.1.21.ebuild 1351 SHA256 2a8e2b9fb90c69c79a8fb3a0f330e128ef9f94c63a47e730e04f964a109a8baf SHA512 4b8335a2004d4fdf69b74c3afdb42309cea64c76d8177ef0e528694cf0c5087ab86575c1b1fe32b1ff66f8c1be911fa17908d3bf7bff352217d8308a34a02fce WHIRLPOOL bffe4814ae3cb131ddcf9349f7e436e2c89f6f7703c87e6d36ef4ebd3c0a56d8fda3462826390f073c7fab2ba7341d59fb6e20351943df81bfd2b6ccaef14d01
 EBUILD sass-3.2.10.ebuild 1279 SHA256 d42868c0deaffaa5ff2e7b5e48de59c59696059ac45bd7af2a7b42b66d377d6b SHA512 b90363cf9cd1afbc923bd89a04b20fee2a4f89905b0a24ec6194b8bd3acb6f53f9046ba7d2c68a1f055b789896533d20de2e0e46500de08406a195dee82f7183 WHIRLPOOL 0f78ce481f3afec5592ffa4a7c57a213fac10c2eb30aa0b7b71bd836cfaa780d36ed846841c0e8847ede6f0a47251e63063cefd3d51e777ba8d871f5ce664ed8
+EBUILD sass-3.2.11.ebuild 1280 SHA256 11a79e1e5d573d09b5ce4949944b6571afff6c8af80772fd40cb810ebe3f9489 SHA512 d6e5d69322b759748716065707dc80e3c431309ebb60920dd593c4292df0f6835e5766b1d3406cf039bac88b380dd218bee6ed9d10ceb84e27d9023c4b7a4566 WHIRLPOOL e7c81a3017295cb1f4800c26f5a4bafa6293271043fb9c6ef406bd2cbaeeaa5aebeb21c6fb4214c2e7af8eeecd2bb71a13b075b43f1e2dca1f6b01fd83f5d2d3
 EBUILD sass-3.2.9.ebuild 1267 SHA256 71199bb5c42e7e9ecc8ef9ad084b115e66b1bb69b3506bb1ce9c8f99187aacf4 SHA512 9d4480f87a8818cf0d8363b2dada3048cd59dc9fe329a0681be5ca0d0534f1fb60986fa709b1eb6b4d9466c241387b1ff05b40dfa42e54453286eac9da8c4221 WHIRLPOOL 05efdece3b1a1ecb1f27551945b4a204c805cdbe2858dd4af3983d92bb08cb37ce76fa40a3486723fb0f0a3db2a288a3d7dba4a0c2b8af65c293fc6f376c6236
-MISC ChangeLog 5324 SHA256 2a0ec8b590c14c84328c7af9e8bbcab6675539a4053d91c52cf6fdcc57224757 SHA512 dfed26bb4039ef936c7332aa075cdea522e60742418fa03716e7eee759e79c4cd525e2d1705a8bffcfee1a7553f5ac4dfed67a5c23ea2ebf980fb54070a42001 WHIRLPOOL dcb11b7fc442c31d55e7b96b94769eeaabe3cf32c3b1025ef594a4fa0b95188bc1d2a60e3672cdf01e4c8ddbb9d49d93afa18fa1eb5e803e13139db4d5b168d3
+MISC ChangeLog 5441 SHA256 ebf0936299f693c49cfa8036f6e2474ff629490ad2ead30cf2c05f1ca1698c4d SHA512 1d9d50d40deb54c6bba569b7ec6a9c55d0abbc4d16c4debd329a7d814df8da26efa880f037b7c9d6caabc2b8625463ed6ed6217b9cbb125c6ce8582c8c0e5e55 WHIRLPOOL 3b028ef6b697c450c447b73f96c33ea6d31f9e541d06690b83ff56e648f1f294a3606ca40cb0b6772fdc826b13984319e1c15079aabc9dc88e53b8574127a20a
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlJJFI0ACgkQiIP6VqMIqNfbjAD8CkHIJOkCSnX8CcN0FwO9vQlY
+c/IpfKF2MAU3eD/lEOcBAI1hLBIU4qqhuitZaAn5AX4LdnqUMqxecX0xBlcksCGt
+=IxSu
+-----END PGP SIGNATURE-----
