@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sass
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.38 2013/07/28 20:29:53 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass/ChangeLog,v 1.39 2013/09/30 06:04:54 graaff Exp $
+
+*sass-3.2.11 (30 Sep 2013)
+
+  30 Sep 2013; Hans de Graaff <graaff@gentoo.org> +sass-3.2.11.ebuild:
+  Version bump.
 
 *sass-3.2.10 (28 Jul 2013)
 
